# gemma-zaken

./: .editorconfig  .gitattributes  .gitignore  .prettierrc  .spectral.yaml  .spectral_old.yaml  .travis.yml  20181004-demo-sprint-4.md  CONTRIBUTING.md  LICENSE.md  LICENTIE  README.md  api_sidebars.ts  clean_all.sh  deelnemende_partijen.md  docusaurus.config.ts  jenkins.sh  output.txt  output2.txt  output_diff.txt  output_sorted.txt  package-lock.json  package.json  redocly.yaml  sidebars.ts  standaard.md  v1_versions.json
.devcontainer/: devcontainer.json
deploy-bot/: .dockerignore  .editorconfig  .gitignore  .pep8  .pylintrc  CHANGELOG.rst  Dockerfile  Gulpfile.js  INSTALL.rst  LICENCE.md  README.rst  docker-compose.override.yml  docker-compose.yml  package-lock.json  package.json  setup.cfg
docs/: .dockerignore  .gitignore  404.md  Dockerfile  Gemfile  Makefile  (+10 more)
tools/tools-validator/: pyproject.toml
tools/tools-validator/src/tools_validator/: cli.py  core.py  validator.py
tools/tools-validator/src/tools_validator/validators/: spectral.py  zgw_cleaner.py
tools/zgw_cleaner/: pyproject.toml  readme.md
tools/zgw_cleaner/src/zgw_cleaner/: api.py  cleaner.py  cli.py  core.py
tools/zgw_cleaner/src/zgw_cleaner/cleaners/: __init__.py  allof.py  commonheaders.py  commonresponses.py  component_headers.py  component_prefix.py  description_format.py  descriptionformat.py  discriminator_to_variant.py  discriminatortovariant.py  double_allof_properties.py  enumdescriptions.py  fieldname.py  naming_conventions.py  operationresponses.py  parameter_consolidation.py  redundant_patched.py  redundant_title.py  redundantallof.py  redundanttitle.py  remove_discriminator.py  remove_unused.py  response_consolidation.py  responseconsolidation.py  schema_metadata_consolidation.py  schemametadataconsolidation.py  search_replace.py  sort.py  standalone_xof.py  tags.py
(+1141 files in other folders)
